--- a/thesis.tex
+++ b/thesis.tex
@@ -41,6 +41,7 @@
 \newacronym{tmh}{TMH}{Trans-membrane Helix}
 \newacronym{tms}{TMS}{Trans-membrane Segment}
 \newacronym{tmp}{TMP}{Trans-membrane Protein}
+\newacronym{tmd}{TMD}{Trans-membrane Domain}
 \newacronym{er}{ER}{Endoplasmic Reticulum}
 \newacronym{ta}{TA}{Tail Anchor}
 \newacronym{gpi}{GPI}{Glycosylphosphatidylinositol}
